[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["akocur <akocur@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.23.0"

[tool.poetry.scripts]
say-hello = "hello.scripts.say_hello:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
